--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -36,8 +36,10 @@
         line-height: $base-line-height;
 
         // Gaps between nav items, but not on the first one
-        &:not(:first-child) {
-            margin-left: 20px;
+        &:not(:first-child):before {
+            content: '/ ';
+            margin-left: 5px;
+            margin-right: 5px;
         }
     }
 
@@ -82,6 +84,12 @@
         .page-link {
             display: block;
             padding: 5px 10px;
+
+            &:not(:first-child):before {
+                content: '';
+                margin-left: 0;
+                margin-right: 0;
+            }
         }
     }
 }
@@ -227,7 +235,7 @@
     }
 
     h4 {
-        font-size: 20px;
+        font-size: 20px;l
 
         @include media-query($on-laptop) {
             font-size: 18px;
