--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -235,7 +235,7 @@
     }
 
     h4 {
-        font-size: 20px;l
+        font-size: 20px;
 
         @include media-query($on-laptop) {
             font-size: 18px;
