--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,7 @@
 
         <a class="page-link" href="/">Home</a>
         {% for crumb in crumbs offset: 1 %}
+          <span class="separator"> / </span>
           <a class="page-link" href="{% assign crumb_limit = forloop.index | plus: 1 %}{% for crumb in crumbs limit: crumb_limit %}{{ crumb | append: '/' }}{% endfor %}">{{ crumb | replace:'-',' ' | replace:'_',' ' | remove:'.html' | capitalize }}</a>
         {% endfor %}
       </div>
