Credits for Let’s Encrypt

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,6 +9,7 @@
         <ul class="contact-list">
           <li>{{ site.title }}</li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <li>Protected by <a target="_blank" href="https://letsencrypt.org">Let’s Encrypt</a></li>
         </ul>
       </div>
 
