--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
         <a class="page-link" href="/">Home</a>
         {% for crumb in crumbs offset: 1 %}
           <span class="separator"> / </span>
-          <a class="page-link" href="{% assign crumb_limit = forloop.index | plus: 1 %}{% for crumb in crumbs limit: crumb_limit %}{{ crumb | remove:'.html' | append: '/' }}{% endfor %}">{{ crumb | replace:'-',' ' | replace:'_',' ' | remove:'.html' | capitalize }}</a>
+          <a class="page-link" href="{% assign crumb_limit = forloop.index | plus: 1 %}{% for crumb in crumbs limit: crumb_limit %}{{ crumb | remove:'.html' | append: '/' }}{% endfor %}">{% assign words = crumb | replace:'-',' ' | replace:'_',' ' | remove:'.html' | capitalize | split:' ' %}{% for word in words %}{% if word == 'pi' %}PI {% elsif word == 'pa' %}PA {% elsif word == 'lir' %}LIR {% else %}{{ word }} {% endif %}{% endfor %}</a>
         {% endfor %}
       </div>
     </nav>
